--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 th{
-	background-color:#4B040F;
+	background-color:#0FDCF2;
 }
 tr:nth-child(even) {
 	background-color: #ADADBA;
